finalized for tutorial part 1

--- a/Git.ipynb
+++ b/Git.ipynb
@@ -32,7 +32,7 @@
     "* Tracking and recreating every step of your work\n",
     "* In the software world: it's called *Version Control*!\n",
     "\n",
-    "What do (good) version control tools give you?\n",
+    "**What do (good) version control tools give you?**\n",
     "\n",
     "* Peace of mind (backups)\n",
     "* Freedom (exploratory branching)\n",
@@ -45,6 +45,16 @@
     "https://inst.eecs.berkeley.edu/~cs61b/sp20/docs/using-git.html\n",
     "\n",
     "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo('8LOGXA4qkCc', width=800, height=300)"
    ]
   },
   {
@@ -368,7 +378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For now, we are *always* going to call `git commit` either with the `-a` option *or* with specific filenames (`git commit file1 file2...`). "
+    "For now, we call `git commit` with the `-a` and `-m` options, but usually you only need `-m`.\n",
+    "\n",
+    "This commands commits a snapshot of all changes in the working directory. This only includes modifications to tracked files ( those that have been added with `git add` at some point in their history)."
    ]
   },
   {
@@ -520,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git commit -m \"added new readme file\""
+    "!git commit -a -m \"added new readme file\""
    ]
   },
   {
@@ -549,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is a branch?  A branch is a label for the state of a GIT repositories. It makes it easy to develop features and go back and forth between the original `master` and the copy `feature branch` version of the files inside the GIT repo \n",
+    "What is a branch?  A branch is a label for the state of a GIT repositories. It makes it easy to develop features and go back and forth between the original `master` and the copy `develop` version of the files inside the GIT repo \n",
     "\n",
     "![](_images/branches.png)\n",
     "\n",
@@ -762,6 +774,8 @@
     "We are now going to introduce the concept of a *remote repository*: a pointer to another copy of the repository that lives on a different location. \n",
     "\n",
     "An example of this is [our repo](https://github.com/ucsb/tutorial_series) on our group's Github.\n",
+    "\n",
+    "When we talk about a remote, we start to say `git pull` and `git push` because we are downloading/uploading with respect to the cloud.\n",
     "\n",
     "Let's see if we have any remote repositories in this directory:"
    ]
@@ -998,17 +1012,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great. Now Qiancheng wants to use it, so initially he clones the repository, and makes a change to the `andrei_code.py` file. He pushes his changes to Github. Then Andrei pull's Qiancheng's changes to his local machine.\n",
-    "\n",
-    "\n",
+    "Great. Now Qiancheng wants to use it, so initially he clones the repository, and makes a change to the `andrei_code.py` file. He pushes his changes to Github. Then Andrei pull's Qiancheng's changes to his local machine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we will have both parties make non-conflicting changes, and committing them locally. Then they both try to push their changes:\n",
     "\n",
     "* Andrei adds a new file, `andrei_other_code.py` and commits.\n",
     "* Qiancheng adds `qiancheng_code.py` then commits.\n",
     "* Andrei does `git push` to Github\n",
-    "* Qiancheng tries to push to Github. What happens here?\n",
+    "* Qiancheng tries to push to Github. What happens here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The problem is that Qiancheng's changes create a commit that conflicts with Andrei's, so git refuses to apply them.  It forces Qiancheng to first do the merge on his machine, so that if there is a conflict in the merge, Qiancheng deals with the conflict manually (git could try to do the merge on the server, but in that case if there's a conflict, the server repo would be left in a conflicted state without a human to fix things up).  The solution is for Qiancheng to first `git pull` the changes (pull in git is really fetch+merge), and then push again.\n",
     "\n",
-    "The problem is that Qiancheng's changes create a commit that conflicts with Andrei's, so git refuses to apply them.  It forces Qiancheng to first do the merge on his machine, so that if there is a conflict in the merge, Qiancheng deals with the conflict manually (git could try to do the merge on the server, but in that case if there's a conflict, the server repo would be left in a conflicted state without a human to fix things up).  The solution is for Qiancheng to first `git pull` the changes (pull in git is really fetch+merge), and then push again. **That's it!**\n",
+    "**That's it!**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The key take-away workflow:\n",
+    "\n",
+    "For 90% of the time, your workflow will be this:\n",
+    "\n",
+    "`git clone` to clone a repository from Github.com\n",
+    "\n",
+    "`git add .` to stage all modifications in the repository (all files)\n",
+    "\n",
+    "`git commit -m \"commit message here\"` commit the changes to what has been staged (i.e. all files)\n",
+    "\n",
+    "`git pull` when there are new changes on the remote repository. Do this before pushing.\n",
+    "\n",
+    "`git push` this will push the changes to the Github from where you cloned it. You don't need to specify anything else.\n",
     "\n",
     "---"
    ]
@@ -1168,6 +1228,24 @@
     "- Emanuele Olivetti's lecture notes and exercises from the G-Node summer school on [Advanced Scientific Programming in Python](https://python.g-node.org/wiki/schedule).\n",
     "- [Pro Git book](http://git-scm.com/book) \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "Tutorial credit:\n",
+    "    \n",
+    "Joaquin Matres (Google) and many others"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
