repo ready for OCPI tutorial

--- a/Git.ipynb
+++ b/Git.ipynb
@@ -156,8 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git config --global user.name \"aisichenko\"\n",
-    "!git config --global user.email \"aisichenko@ucsb.edu\""
+    "!git config --global user.name \"username\"\n",
+    "!git config --global user.email \"email\""
    ]
   },
   {
@@ -929,11 +929,9 @@
    "source": [
     "This will show the basic workflow of collaborating on a project with a small team where everyone has write privileges to the same repository.  \n",
     "\n",
-    "First, let's create a new repository called \"test\" in the OCPI team on Github/ucsb, by clicking \"New Repository\" under UCSB.\n",
+    "First, let's create a new repository called \"test\" on your personal Github. Then we clone it:\n",
     "\n",
-    "Make sure to enter your Github username and the token as instructed previously, below, in the format:\n",
-    "\n",
-    "`git clone https://username:token@github.com/ucsb/ocpi_test`\n"
+    "`git clone https://github.com/aisichenko/test.git`\n"
    ]
   },
   {
@@ -942,7 +940,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://aisichenko:55827dc7997b832419524004b527dde171c041f1@github.com/ucsb/ocpi_test"
+    "!git clone https://github.com/aisichenko/test.git"
    ]
   },
   {
@@ -951,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd ocpi_test"
+    "cd test"
    ]
   },
   {
@@ -1012,15 +1010,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great. Now Qiancheng wants to use it, so initially he clones the repository, and makes a change to the `andrei_code.py` file. He pushes his changes to Github. Then Andrei pull's Qiancheng's changes to his local machine."
+    "Great. Now Bob wants to use it, so initially he clones the repository, and makes a change to the `andrei_code.py` file. He pushes his changes to Github. Then Andrei pull's Bob's changes to his local machine."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1029,23 +1020,16 @@
     "Next, we will have both parties make non-conflicting changes, and committing them locally. Then they both try to push their changes:\n",
     "\n",
     "* Andrei adds a new file, `andrei_other_code.py` and commits.\n",
-    "* Qiancheng adds `qiancheng_code.py` then commits.\n",
+    "* Bob adds `Bob_code.py` then commits.\n",
     "* Andrei does `git push` to Github\n",
-    "* Qiancheng tries to push to Github. What happens here?"
+    "* Bob tries to push to Github. What happens here?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem is that Qiancheng's changes create a commit that conflicts with Andrei's, so git refuses to apply them.  It forces Qiancheng to first do the merge on his machine, so that if there is a conflict in the merge, Qiancheng deals with the conflict manually (git could try to do the merge on the server, but in that case if there's a conflict, the server repo would be left in a conflicted state without a human to fix things up).  The solution is for Qiancheng to first `git pull` the changes (pull in git is really fetch+merge), and then push again.\n",
+    "The problem is that Bob's changes create a commit that conflicts with Andrei's, so git refuses to apply them.  It forces Bob to first do the merge on his machine, so that if there is a conflict in the merge, Bob deals with the conflict manually (git could try to do the merge on the server, but in that case if there's a conflict, the server repo would be left in a conflicted state without a human to fix things up).  The solution is for Bob to first `git pull` the changes (pull in git is really fetch+merge), and then push again.\n",
     "\n",
     "**That's it!**\n",
     "\n",
